feature(AbstractCapabilities.java): add opportunity to read w3c capabilities from the config